<?xml version="1.0"
    encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:orientation="vertical"
    android:layout_margin="16dp"

    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <EditText
        android:inputType="text"
        android:id="@+id/ed_name"
        android:hint="@string/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:inputType="number"
        android:id="@+id/ed_number"
        android:layout_marginBottom="16dp"
        android:hint="@string/input_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginBottom="16dp"
        android:textSize="20sp"
        android:text="@string/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:checked="true"
            android:id="@+id/rdbt_male"
            android:textSize="17sp"
            android:layout_weight="1"
            android:text="@string/male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rdbt_female"
            android:textSize="17sp"
            android:layout_weight="1"
            android:text="@string/female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RadioGroup>
    <Button
        android:onClick="addContact"
        android:id="@+id/bt_add"
        android:padding="@dimen/padding_8dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorbutom"
        android:text="@string/add"
        android:layout_gravity="center"
        android:layout_width="137dp"
        android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/lv_contact"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

</LinearLayout>
